# beerio.js

./: .gitignore  Cargo.toml  app.js  flake.nix  index.html  missions.json  package-lock.json  package.json  style.css
nix/: module.nix
partials/: all_missions.html  coop.html  randomizer.html  solo.html  splash.html
src/: main.rs  model.rs  state.rs
templates/: base.html  index.html  layout_wrapper.html  traitor_join.html  traitor_lobby.html  traitor_role.html  traitor_setup.html
templates/partials/: all_missions.html  coop.html  pill_selector.html  randomizer.html  seeded_layout.html  solo.html  splash.html
