[package]
name = "beerio"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }
askama = "0.14"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
percent-encoding = "2.3.2"
